    temporary workaround and will be removed once all packages use the new
    helper.
  * Update the checks which test if systemd is the active init. The
    recommended check is [ -d /run/systemd/system ] as this will also work
    with a standalone systemd-logind.
  * Set Maintainer to pkg-systemd-maintainers@lists.alioth.debian.org. Add
    Tollef and myself as Uploaders.

 -- Michael Biebl <biebl@debian.org>  Thu, 20 Jun 2013 00:54:30 +0200

systemd (44-11) unstable; urgency=low

  * Team upload.
  * Run debian-enable-units.service after sysinit.target to ensure our tmp
    files aren't nuked by systemd-tmpfiles.
  * The mountoverflowtmp SysV init script no longer exists so remove that
    from remount-rootfs.service to avoid an unnecessary diff to upstream.
  * Do not fail on purge if /var/lib/systemd is empty and has been removed
    by dpkg.

 -- Michael Biebl <biebl@debian.org>  Wed, 13 Mar 2013 08:03:06 +0100

systemd (44-10) unstable; urgency=low

  * Team upload.
  * Using the return code of "systemctl is-enabled" to determine whether we
    enable a service or not is unreliable since it also returns a non-zero
    exit code for masked services. As we don't want to enable masked services,
    grep for the string "disabled" instead.

 -- Michael Biebl <biebl@debian.org>  Fri, 15 Feb 2013 17:01:24 +0100

systemd (44-9) unstable; urgency=low

  * Team upload.
  * Fix typo in systemd.socket man page.  Closes: #700038
  * Use color specification in "systemctl dot" which is actually
    understood by dot.  Closes: #643689
  * Fix mounting of remote filesystems like NFS.  Closes: #673309
  * Use a file trigger to automatically enable service and socket units. A lot
    of packages simply install systemd units but do not enable them. As a
    result they will be inactive after the next boot. This is a workaround for
    wheezy which will be removed again in jessie.  Closes: #692150

 -- Michael Biebl <biebl@debian.org>  Fri, 15 Feb 2013 13:35:39 +0100
