@@ -12,15 +12,11 @@ Build-Depends: debhelper (>= 9),
                pkg-config,
                libudev-dev (>= 172),
                libdbus-1-dev (>= 1.3.2~),
-               libdbus-glib-1-dev,
-               libgtk2.0-dev,
-               valac (>= 0.12),
                xsltproc,
                docbook-xsl,
                docbook-xml,
                m4,
                libpam0g-dev,
-               libnotify-dev (>= 0.7.0),
                libaudit-dev,
                dh-autoreconf,
                automake (>= 1.11),
@@ -31,7 +27,6 @@ Build-Depends: debhelper (>= 9),
                libselinux1-dev,
                libacl1-dev,
                liblzma-dev,
-               libgee-dev,
                gperf,
                libkmod-dev (>= 5),
                faketime
@@ -41,7 +36,7 @@ Architecture: linux-any
 Section: admin
 Priority: extra
 Recommends: libpam-systemd
-Suggests: systemd-gui, python, python-dbus, python-cairo
+Suggests: systemd-ui, python, python-dbus, python-cairo
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}, util-linux (>= 2.19.1-2), initscripts (>= 2.88dsf-17), udev
 Breaks: lvm2 (<< 2.02.84-1), lsb-base (<< 4.1+Debian4)
@@ -92,22 +87,6 @@ Description: system and service manager - PAM module
  .
  This package contains the PAM module which registers user sessions in
  the systemd control group hierarchy
-
-Package: systemd-gui
-Architecture: linux-any
-Section: admin
-Priority: extra
-Depends: systemd (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
-Description: system and service manager - GUI
- systemd is a replacement for sysvinit.  It is dependency-based and
- able to read the LSB init script headers in addition to parsing rcN.d
- links as hints.
- .
- It also provides process supervision using cgroups and the ability to
- not only depend on other init script being started, but also
- availability of a given mount point or dbus service.
- .
- This package contains the graphical frontend for systemd.
 
 Package: libsystemd-login0
 Architecture: linux-any
