@@ -10,7 +10,7 @@ override_dh_auto_configure:
 		--with-rootprefix= \
 		--with-rootlibdir=/lib/$(DEB_HOST_MULTIARCH) \
 		--with-udevrulesdir=/lib/udev/rules.d \
-		--enable-gtk \
+		--disable-gtk \
 		--enable-libcryptsetup \
 		--enable-tcpwrap \
 		--enable-selinux \
@@ -20,12 +20,10 @@ override_dh_auto_configure:
 override_dh_auto_clean:
 	dh_auto_clean
 	rm -f man/*.[1358]
-	rm -f src/systemadm.c
-	rm -f src/gnome-ask-password-agent.c
-	rm -f src/systemd-interfaces.c
 
 override_dh_install:
 	rm debian/tmp/usr/share/doc/systemd/LICENSE
+	rm debian/tmp/usr/share/man/man1/systemadm.1
 	rm debian/tmp/lib/systemd/system/sysinit.target.wants/systemd-vconsole-setup.service
 	find debian/tmp/ -name '*.la' -delete
 	chmod +x debian/debian-fixup
